# Shadow.ai

./: .gitignore  HACKATHON_SETUP.md  README.md  docker-compose.yml  stage2_plan.md  stage2_tasks_draft.yaml  start_lite.sh  test.yml
agent-capabilities/: Dockerfile  README.md  autofix_deps.sh  diagnose_error.sh  test_capabilities.py
chrome-extension/: .eslintrc.js  README.md  manifest.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
chrome-extension/scripts/: build.js
chrome-extension/src/: background.ts  content.tsx  options.html  options.tsx  popup.html  popup.tsx  sidepanel.html  sidepanel.tsx  styles.css
chrome-extension/src/components/: AgentZeroApp.tsx
chrome-extension/styles/: content.css
confs/: application.yml
dashboard/: Dockerfile  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx  providers.tsx
dashboard/app/diagnostics/: page.tsx
dashboard/app/docs/: page.tsx
dashboard/app/hackathon/: page.tsx
dashboard/app/logs/: page.tsx
dashboard/components/: Header.tsx  MCSCard.tsx  MobileMenu.tsx  Sidebar.tsx
dashboard/lib/: ai-config.ts  auth.ts  db.ts
dashboard/models/: History.ts  Report.ts  User.ts
docs/project_assets/: what_i_planned_till_now.txt
flows/: agent_zero.yml  agent_zero_lite.yml
infrastructure/: docker-compose.yml
scripts/: analyze_with_gemini.py  calculate_mcs.py  deploy_flows.sh  fetch_metrics.py  test_webhook.py
tests/: broken_build.json  mock_data.json
webhook-receiver/: Cargo.toml
webhook-receiver/src/: main.rs
(+31 files in other folders)
